<resources>
    <string name="app_name">MyRestaurant_V2_Kotlin</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="best_deals">Best Deals</string>
    <string name="menu_category">Categories</string>
    <string name="fragment_category">Categories</string>
    <string name="fragment_foodlist">FoodList</string>
    <string name="size">Size</string>
    <string name="add_on">Addon</string>
    <string name="fragment_food_detail">Food Details</string>
    <string name="fragment_cart">Shopping Cart</string>
    <string name="menu_cart">Shopping Cart</string>
    <string name="action_clear_cart">Clear Cart</string>
    <string name="sign_out">Sign Out</string>
    <string name="fragment_view_order">Order List</string>
    <string name="order_history">Order History</string>
    <string name="action_search_category">Search</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCAUKK1lZ3T7NAFHNcu-Vobl7JQIQGiZIs</string>
    <string name="update_info">Update Info</string>
    <string name="title_activity_tracking_order">Map</string>
    <string name="menu_news">News</string>
</resources>