<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
    </group>

    <group android:id="@+id/category_group">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_book_24"
            android:title="@string/menu_category" />
    </group>

    <group android:id="@+id/cart_group">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_24"
            android:title="@string/menu_cart" />
    </group>

    <group android:id="@+id/category_view_order">
        <item
            android:id="@+id/nav_view_order"
            android:icon="@drawable/ic_preview_24"
            android:title="@string/order_history" />
    </group>

    <group>
        <item
            android:id="@+id/nav_update_info"
            android:icon="@drawable/ic_update_24"
            android:title="@string/update_info" />
    </group>

    <group android:id="@+id/sign_out">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_24"
            android:title="@string/sign_out" />
    </group>
</menu>