<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myrestaurant_v2_kotlin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.myrestaurant_v2_kotlin.ui.category.CategoryFragment"
        android:label="@string/fragment_category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_food_list"
        android:name="com.example.myrestaurant_v2_kotlin.ui.foodlist.FoodListFragment"
        android:label="@string/fragment_foodlist"
        tools:layout="@layout/fragment_foodlist" />
    <fragment
        android:id="@+id/nav_food_detail"
        android:name="com.example.myrestaurant_v2_kotlin.ui.fooddetails.FoodDetailFragment"
        tools:layout="@layout/fragment_food_detail"
        android:label="@string/fragment_food_detail" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.myrestaurant_v2_kotlin.ui.cart.CartFragment"
        android:label="@string/fragment_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/nav_view_order"
        android:name="com.example.myrestaurant_v2_kotlin.ui.vieworder.ViewOrderFragment"
        android:label="@string/fragment_view_order"
        tools:layout="@layout/fragment_view_order" />

</navigation>